<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
  <modelVersion>4.0.0</modelVersion>
  <groupId>org.openjfx</groupId>
  <artifactId>hellofx</artifactId>
  <packaging>jar</packaging>
  <version>1.0-SNAPSHOT</version>
  <name>demo</name>
  <url>http://maven.apache.org</url>

  <properties>
    <maven.compiler.release>11</maven.compiler.release>
    <javafx.version>15.0.1</javafx.version>
    <micronaut.version>2.3.1</micronaut.version>
    <supernaut.version>0.1.0</supernaut.version>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
  </properties>

  <repositories>
    <repository>
      <id>central</id>
      <url>https://repo.maven.apache.org/maven2</url>
    </repository>
    <repository>
      <id>bintray.supernautapp</id>
      <url>https://dl.bintray.com/supernautapp/maven</url>
    </repository>
  </repositories>

  <dependencies>
    <dependency>
      <groupId>org.openjfx</groupId>
      <artifactId>javafx-controls</artifactId>
      <version>${javafx.version}</version>
    </dependency>
    <dependency>
      <groupId>app.supernaut</groupId>
	    <artifactId>supernaut-fx</artifactId>
	    <version>${supernaut.version}</version>
	    <type>jar</type>
    </dependency>
    <dependency>
      <groupId>app.supernaut</groupId>
	    <artifactId>supernaut-fx-micronaut</artifactId>
	    <version>${supernaut.version}</version>
	    <type>jar</type>
      <scope>compile</scope>
    </dependency>
    <dependency>
      <groupId>io.micronaut</groupId>
      <artifactId>micronaut-inject</artifactId>
	    <version>${micronaut.version}</version>
      <scope>compile</scope>
      <exclusions>
        <exclusion>
          <groupId>com.google.code.findbugs</groupId>
          <artifactId>jsr305</artifactId>
        </exclusion>
      </exclusions>

    </dependency>
  </dependencies>
  <build>
    <plugins>
<!--      <plugin>-->
<!--        <groupId>io.micronaut.build</groupId>-->
<!--        <artifactId>micronaut-maven-plugin</artifactId>-->
<!--        <version>${micronaut.version}</version>-->
<!--      </plugin>-->
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-compiler-plugin</artifactId>
        <version>3.8.1</version>
        <configuration>
          <release>${maven.compiler.release}</release>
          <debug>true</debug>
          <debuglevel>lines,vars,source</debuglevel>
          <annotationProcessorPaths>
            <path>
              <groupId>io.micronaut</groupId>
              <artifactId>micronaut-inject-java</artifactId>
              <version>${micronaut.version}</version>
            </path>
          </annotationProcessorPaths>
          <compilerArgs>
            <arg>-Amicronaut.processing.group=org.openjfx</arg>
            <arg>-Amicronaut.processing.module=hellofx</arg>
          </compilerArgs>
        </configuration>
      </plugin>
      <plugin>
        <groupId>org.openjfx</groupId>
        <artifactId>javafx-maven-plugin</artifactId>
        <version>0.0.5</version>
        <configuration>
          <mainClass>hellofx/app.supernaut.fx.sample.maven.HelloFX</mainClass>
          <release>${maven.compiler.release}</release>
          <runtimePathOption>MODULEPATH</runtimePathOption>
          <options>
            <option>--patch-module</option>
            <option>java.annotation=jsr305-3.0.2.jar</option>
            <option>--add-modules</option>
            <option>app.supernaut.fx.micronaut</option>
          </options>
          <jlinkImageName>hellofx</jlinkImageName>
          <launcher>launcher</launcher>
        </configuration>
      </plugin>
    </plugins>
  </build>
</project>
